# cpp-boilerplate

./: CMakeLists.txt  README.md  docker-compose.yml
test/: CMakeLists.txt  main.cpp
